--- a/前端学习/dom.html
+++ b/前端学习/dom.html
@@ -15,6 +15,7 @@
                 font-size: 44px;
                 letter-spacing: 5px;
                 background-color: cadetblue;
+                box-shadow:10px 10px 5px #888888;
             }
         </style>
         <script>
