--- a/前端学习/dom.html
+++ b/前端学习/dom.html
@@ -16,6 +16,8 @@
                 letter-spacing: 5px;
                 background-color: cadetblue;
                 box-shadow:10px 10px 5px #888888;
+                border-radius: 20px;
+                text-align: center;
             }
         </style>
         <script>
